--- a/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
@@ -50,7 +50,7 @@
                                 <span>Download Excel</span>
                             }
                         </MudButton>
-                        <<button class="btn btn-info btn-sm" @onclick="() => ImportUsers(calendar.Id)">Leden Importeren</button>
+                        <button class="btn btn-info btn-sm" @onclick="() => ImportUsers(calendar.Id)">Leden Importeren</button>
                         <button class="btn btn-info btn-sm" @onclick="() => MemberOverview(calendar.Id)">Leden Kalender</button>
                     </td>
                 </tr>
