Add backround foto to home page #127

--- a/src/Ezac.Roster.Web/Components/Pages/Home.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Home.razor
@@ -43,6 +43,16 @@
 <div>
     <label>@Message</label>
 </div>
+
+<style>
+    body {
+        background-image: url("/images/Ezac-zweefvliegers.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+</style>
+
 @code{
     private string UserName;
     private string Password;
