--- a/src/Ezac.Roster.Web/Components/Pages/Home.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Home.razor
@@ -50,6 +50,7 @@
     private bool showPassword;
     private bool isLoading = false;
 
+    private const string HardcodeUserName = "Roosteraar";
     private const string HardcodedPassword = "ezac";
 
     private async Task Login()
@@ -62,9 +63,7 @@
         }
         if (Password == HardcodedPassword)
         {
-            var users = await UserService.GetAllAsync();
-            var user = users.Value.FirstOrDefault(u => u.Name == UserName);
-            if (user != null)
+            if (UserName == HardcodeUserName)
             {
                 Message = "Logging in";
                 LogInBooLService.IsLoggedIn = true;
@@ -72,12 +71,12 @@
             }
             else
             {
-                Message = "Gebruikersnaam of/en wachtwoord zijn niet juist";
+                Message = "Gebruikersnaam is niet juist";
             }
         }
         else
         {
-            Message = "Gebruikersnaam of/en wachtwoord zijn niet juist";
+            Message = "Wachtwoord is niet juist";
         }
         isLoading = false;
     }
@@ -86,7 +85,6 @@
     {
         showPassword = !showPassword;
     }
-    //await ProtectedLocalStore.SetAsync("IsLoggedIn", IsLoggedIn);
 }
 
 
