--- a/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
@@ -14,7 +14,7 @@
 <h3>Alle kalenders</h3>
 
 <MudButton Variant="Variant.Filled" Color="Color.Primary" @onclick="CreateCalendar">
-    <MudIcon Icon="@Icons.Material.Filled.Add" /> Maak een Nieuwe Kalender
+    <MudIcon Icon="@Icons.Material.Filled.Add" />
 </MudButton>
 
 <ConfirmDeletePopUp @ref="DeletePopUp" deleteCalendar="@DeleteCalendar" />
@@ -37,13 +37,17 @@
                     <td>@calendar.Start.ToString("dd/MM/yyyy") tot @calendar.End.ToString("dd/MM/yyyy")</td>
                     <td>
                         <MudButton Variant="Variant.Filled" Color="Color.Info" Size="Size.Small" @onclick="() => OverviewCalendar(calendar.Id)">
-                            <MudIcon Icon="@Icons.Material.Filled.Info" /> Overzicht
+                            <MudIcon Icon="@Icons.Material.Filled.Info" />
                         </MudButton>
                         <MudButton Variant="Variant.Filled" Color="Color.Warning" Size="Size.Small" @onclick="() => UpdateCalendar(calendar.Id)">
-                            <MudIcon Icon="@Icons.Material.Filled.Edit" /> Bewerken
+                            <MudIcon Icon="@Icons.Material.Filled.Edit" />
                         </MudButton>
-                        <button class="btn btn-danger btn-sm" @onclick="() => ShowDeletePopUp(calendar.Id)">Verwijderen</button>
-                        <button class="btn btn-success btn-sm" @onclick="() => GenerateUniqueLink(calendar.Id)">Link Versturen</button>
+                        <MudButton Variant="Variant.Filled" Color="Color.Error" Size="Size.Small" @onclick="() => ShowDeletePopUp(calendar.Id)">
+                            <MudIcon Icon="@Icons.Material.Filled.Delete" />
+                        </MudButton>
+                        <MudButton Variant="Variant.Filled" Color="Color.Success" Size="Size.Small" @onclick="() => GenerateUniqueLink(calendar.Id)">
+                            <MudIcon Icon="@Icons.Material.Filled.Link" />
+                        </MudButton>
                         <MudButton Variant="Variant.Filled" Color="Color.Info" Size="Size.Small" Disabled="@isLoading"
                                    @onclick="@(async () => await DownloadCalendar(calendar.Id))">
                             @if (isLoading)
@@ -53,7 +57,7 @@
                             }
                             else
                             {
-                                <span>Download Excel</span>
+                                <MudIcon Icon="@Icons.Material.Filled.Download" />
                             }
                         </MudButton>
                     </td>
