Order memberoverviewlist alphabetically #160

--- a/src/Ezac.Roster.Web/Components/Pages/MemberOverview.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/MemberOverview.razor
@@ -43,7 +43,7 @@ else
 				UserPermissions = user.UserPermissions,
 				Preferences = user.Preferences,
 				Jobs = user.Jobs
-			}).ToList();
+			}).OrderBy(user => user.Name).ToList();
 		}
 		else
 		{
