--- a/src/Ezac.Roster.Web/Components/Pages/TestExcelPage.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/TestExcelPage.razor
@@ -9,6 +9,10 @@
     <InputFile OnChange="LoadFile" />
     <button type="submit" disabled="@isLoading" class="btn btn-primary">
         <MudIcon Icon="@Icons.Material.Filled.Upload" Margin="Margin.Right"></MudIcon>
+        @if (isLoading)
+        {
+            <MudProgressCircular Indeterminate="true" Color="Color.Primary" />
+        }
     </button>
 </form>
 
@@ -21,12 +25,12 @@
 }
 
 @code {
-	[Parameter]
-	public string calendarId { get; set; }
+    [Parameter]
+    public string calendarId { get; set; }
 
-	private IBrowserFile file;
-	private string errorMessage;
-	private bool isLoading = false;
+    private IBrowserFile file;
+    private string errorMessage;
+    private bool isLoading = false;
 
     private void LoadFile(InputFileChangeEventArgs e)
     {
@@ -35,6 +39,7 @@
 
     private async Task HandleFile()
     {
+        isLoading = true;
         if (file == null)
         {
             errorMessage = "Selecteer een bestand";
@@ -53,9 +58,10 @@
             using var stream = file.OpenReadStream();
             isLoading = true;
 
-			errorMessage = await FileService.ImportUsers(stream, Guid.Parse(calendarId));
-			isLoading = false;
-		}
-	}
+            errorMessage = await FileService.ImportUsers(stream, Guid.Parse(calendarId));
+            isLoading = false;
+        }
+        isLoading = false;
+    }
 }
 
